Fixed mobile overflow issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,8 @@ body {
   // background: $lt-grey;
   height: 100%;
   width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 // Basic body styles
